--- a/views/custom_qs.ejs
+++ b/views/custom_qs.ejs
@@ -33,7 +33,7 @@
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="/static/script.js"></script>
 </body>
 
 </html>
